add newtemplate frontend and backand
