# src/api/src/app.ts
@@ -6,6 +6,7 @@ import { getConfig } from "./config";
 import rounds from "./routes/editRounds";
 import protectedRounds from "./routes/viewRounds";
 import newOrEditRounds from "./routes/newOrEditRounds";
+import newTemplate from "./routes/newtemplate";
 import roundList from "./routes/roundList";
 import { configureMongoose } from "./models/mongoose";
 import { observability } from "./config/observability";
@@ -54,12 +55,14 @@ export const createApp = async (): Promise<Express> => {
       origin: originList(),
     })
   );
-
+ // round routes
   app.use("/round", rounds);
   app.use("/round", auth, protectedRounds);
   app.use("/rounds", auth, roundList);
   app.use("/newfeedbackround", auth, newOrEditRounds);
-  // round routes
+ //template routes
+ app.use("/newtemplate", auth, newTemplate);
+
 
   // Swagger UI
   const swaggerDocument = yaml.load("./openapi.yaml");
