# src/api/src/models/template.ts
@@ -1,4 +1,4 @@
-import mongoose, { Schema } from "mongoose";
+import mongoose from "mongoose";
 
 export enum NameIsAnonymous {
   ANONYMT,
@@ -11,7 +11,7 @@ export interface TemplateData {
   templateName: string;
   scoreScale: scoreScale;
   mandatoryMotivations: boolean;
-  nameIsAnonymous: NameIsAnonymous;
+  nameIsMandatory: "MANDATORY";
   categories: Category[];
   colorScale: Color;
 }
@@ -40,24 +40,53 @@ export interface Question {
   text: string;
 }
 
-const schema = new Schema(
-  {
-    name: {
-      type: String,
-      required: true,
-    },
-    description: String,
-  },
-  {
-    timestamps: {
-      createdAt: "createdDate",
-      updatedAt: "updatedDate",
-    },
-  }
-);
+// Define the schema for ScoreDescription
+const scoreDescriptionSchema = new mongoose.Schema({
+  score: { type: String, required: true },
+  title: { type: String, required: true },
+  description: { type: String, required: true }
+});
+
+// Define the schema for ScoreScale
+const scoreScaleSchema = new mongoose.Schema({
+  start: { type: Number, required: true },
+  end: { type: Number, required: true },
+  descriptions: [scoreDescriptionSchema]
+});
+
+// Define the schema for Question
+const questionSchema = new mongoose.Schema({
+  id: { type: String, required: true },
+  text: { type: String, required: true }
+});
+
+// Define the schema for Category
+const categorySchema = new mongoose.Schema({
+  categoryName: { type: String, required: true },
+  questions: [questionSchema]
+});
+
+// Define the schema for ColorScale
+const colorScaleSchema = new mongoose.Schema({
+  colorName: { type: String, required: true },
+  hexValues: { type: [String], required: true }
+});
+
+// Define the schema for NewTemplateModel
+const NewTemplateSchema = new mongoose.Schema({
+  templateName: { type: String, required: true },
+  nameIsMandatory: { type: String, required: true },
+  scoreScale: scoreScaleSchema,
+  mandatoryMotivations: { type: Boolean, required: true },
+  categories: [categorySchema],
+  colorScale: colorScaleSchema
+});
+
 
 export const TemplateModel = mongoose.model<TemplateData>(
   "templates",
-  schema,
+  NewTemplateSchema,
   "templates"
 );
+
+
